--- a/jd/cards_yaml/0008-trespass-person-detention-analysis.yml
+++ b/jd/cards_yaml/0008-trespass-person-detention-analysis.yml
@@ -1,41 +1,44 @@
 front: "Shopkeeper/police detention: classify battery, assault, false imprisonment, authority and remedies?"
 back: |
-  Issue — In shopkeeper/police detention, which trespass torts arise (battery, assault, false imprisonment) and is restraint justified by statute or consent?
+  Issue.
+  In shopkeeper/police detention, which trespass torts arise (battery, assault, false imprisonment) and is restraint justified by statute or consent?
 
-  Rule —
-  - Battery is direct, voluntary physical contact without lawful justification: Williams v Milotin (1957) 97 CLR 465, 474.
-  - False imprisonment is total restraint; once proved, the onus shifts to the defendant to justify it: Murray v Ministry of Defence [1988] 1 WLR 692; Myer Stores Ltd v Soo [1991] 2 VR 597, 611.
-  - Assault is conduct causing reasonable apprehension of imminent unlawful contact.
+  Rule.
+  - False imprisonment: total restraint of freedom of movement; no reasonable means of egress. Once restraint is shown, onus shifts to D to justify lawfulness (e.g., statutory power, consent). Bird v Jones (1845) 7 QB 742 — partial obstruction ≠ false imprisonment. Murray v Ministry of Defence [1988] 1 WLR 692 (HL, UK persuasive) and Myer Stores Ltd v Soo (1991) 2 VR 597 (Vic CA) — shopkeeper detention guidance.
+  - Battery: direct, intentional contact; no “hostility” requirement; contact can be through clothing/objects. Williams v Milotin (1957) 97 CLR 465.
+  - Assault: reasonable apprehension of imminent unlawful contact; no contact required.
   - Entry onto land usually rests on an implied licence; exceeding it vitiates authority: Halliday v Nevill (1984) 155 CLR 1, 10–11.
   - Aggravated and exemplary damages may be awarded for high-handed trespasses: Fontin v Katapodis (1962) 108 CLR 177, 183–184; New South Wales v Ibbett (2006) 229 CLR 638, 647 [28].
   - Consent and necessity remain complete defences if established.
 
-  Application scaffold —
+  Application scaffold.
   (1) Classify the torts: contact (battery), apprehension (assault), total restraint (false imprisonment).
   (2) Identify the actor (shopkeeper, security, police) and their purpose.
   (3) Demand proof of statutory preconditions and proportional force.
   (4) Test entry authority and implied-licence limits.
-  (5) Remedies: compensatory damages; consider aggravated and exemplary awards.
+  (5) Shopkeeper/citizen arrest (practical test): (a) reasonable grounds to suspect an indictable offence/theft; (b) purpose = investigate/hand to police; (c) duration no longer than reasonably necessary; (d) force reasonable/proportionate; (e) call police without undue delay (Myer Stores v Soo supports these considerations).
+  (6) If detention is claimed lawful, test Crimes Act 1958 (Vic) ss 458–459 (arrest without warrant) and s 462A (force); for federal police, Crimes Act 1914 (Cth) ss 3W, 3ZC. (Verify current numbering before an exam.)
+  (7) Remedies: compensatory damages; consider aggravated and exemplary awards.
 
-  Authorities map —
+  Authorities map.
   - Williams v Milotin — Battery definition.
-  - Murray v Ministry of Defence; Myer Stores v Soo — False imprisonment onus/knowledge.
-  - Halliday v Nevill — Entry and implied licence.
+  - Bird v Jones (UK persuasive) — partial obstruction ≠ total restraint.
+  - Murray v Ministry of Defence (HL, UK persuasive); Myer Stores v Soo (Vic CA) — False imprisonment onus/knowledge and shopkeeper detention.
+  - Halliday v Nevill — Entry and implied licence guardrails.
   - Fontin v Katapodis; New South Wales v Ibbett — Aggravated/exemplary damages.
 
-  Statutory hook —
-  - Crimes Act 1958 (Vic) ss 458–459 (arrest without warrant), s 462A (force).
+  Statutory hook.
+  - Crimes Act 1958 (Vic) ss 458–459, 462A.
   - Crimes Act 1914 (Cth) ss 3W, 3ZC.
-  - Charter of Human Rights and Responsibilities Act 2006 (Vic) ss 10, 12, 13(a).
 
-  Tripwires —
-  - Treating partial obstruction as false imprisonment.
-  - Requiring "hostility" for battery.
-  - Ignoring the onus shift after restraint is shown.
-  - Equating suspicion with reasonable grounds.
-  - Overlooking implied-licence limits on entry.
+  Tripwires.
+  - Treating partial obstruction as false imprisonment (Bird v Jones).
+  - Requiring “hostility” for battery.
+  - Ignoring the onus shift once restraint is proved.
+  - Equating suspicion with reasonable grounds for detention.
 
-  Conclusion — Classify the trespasses, require statutory justification, scrutinise force and entry, and if limits are exceeded award compensatory plus aggravated and exemplary damages.
+  Conclusion.
+  Classify the trespasses, require statutory justification, scrutinise force and entry, and if limits are exceeded award compensatory plus aggravated and exemplary damages.
 
 why_it_matters: |
   Shopkeeper/police detention problems are MLS staples. Examiners expect you to classify each trespass, interrogate statutory authority, note the onus shifting for false imprisonment, and structure remedies (including aggravated/exemplary damages) with precise pinpoints.
@@ -46,51 +49,58 @@ diagram: |
   ```mermaid
   mindmap
     root((Detention torts))
-      Issue
-        Classify battery / assault / FI
-      Rule
+      Classify
+        Battery / Assault / FI
+        Total restraint (FI)
+      Elements
         Battery = direct, voluntary contact
-        FI = total restraint; onus shifts to justify
-        Assault = reasonable apprehension of imminent contact
-      Application
-        Classify → actor → force/entry → remedies
-        Prove restraint; demand statutory preconditions & proportional force
+        FI: onus shifts after restraint shown
+        Assault = apprehension of imminent contact
+      Apply
+        Prove restraint; statutory preconditions; proportional force
         Check implied-licence limits on entry
-      Authorities
+        Call police without undue delay
+      Cases
         Myer Stores v Soo
         Halliday v Nevill
-      Statute
-        Vic Crimes Act ss 458–459 (arrest) / s 462A (force)
+      Statutes
+        Vic Crimes Act ss 458–459; s 462A
         Cth Crimes Act ss 3W, 3ZC
   ```
-
+  
 tripwires:
-  - "Treating partial obstruction as false imprisonment."
-  - "Requiring 'hostility' for battery."
-  - "Ignoring the onus shift after restraint is shown."
-  - "Equating suspicion with reasonable grounds."
-  - "Overlooking implied-licence limits on entry."
+  - Treating partial obstruction as false imprisonment (Bird v Jones).
+  - Requiring “hostility” for battery.
+  - Ignoring the onus shift once restraint is proved.
+  - Equating suspicion with reasonable grounds for detention.
 
 anchors:
   cases:
     - name: Williams v Milotin
       citation: (1957) 97 CLR 465
       court: HCA
-      pinpoints: "474"
-      notes: Defines battery as direct, voluntary contact without lawful justification.
-    
+      pinpoints:
+        - 474
+      notes: Defines battery as direct, intentional contact without lawful justification.
+
+    - name: Bird v Jones
+      citation: (1845) 7 QB 742
+      court: UK QB (persuasive)
+      pinpoints: []
+      notes: Partial obstruction is not false imprisonment.
+
     - name: Murray v Ministry of Defence
       citation: "[1988] 1 WLR 692"
-      court: House of Lords (UK)
+      court: House of Lords (UK persuasive)
       pinpoints: []
-      notes: Onus shifts to defendant once false imprisonment is proved; persuasive in Australia.
+      notes: Onus shifts to defendant once false imprisonment is proved; persuasive only.
 
     - name: Myer Stores Ltd v Soo
       citation: "[1991] 2 VR 597"
-      court: Supreme Court of Victoria
+      court: Supreme Court of Victoria (Vic CA)
       pinpoints:
         - 611
-      notes: False imprisonment onus and knowledge.
+      notes: Shopkeeper detention guidance; onus to justify restraint.
 
     - name: Halliday v Nevill
       citation: (1984) 155 CLR 1
@@ -122,20 +132,13 @@ anchors:
         - s 458
         - s 459
         - s 462A
-      notes: Regulates police powers of arrest and detention in Victoria.
+      notes: Arrest/force powers; civil trespass remains.
 
     - name: Crimes Act 1914 (Cth)
       provisions:
         - s 3W
         - s 3ZC
-      notes: Governs federal law enforcement powers and procedures.
-
-    - name: Charter of Human Rights and Responsibilities Act 2006 (Vic)
-      provisions:
-        - s 10
-        - s 12
-        - s 13(a)
-      notes: Protects fundamental rights including liberty and security of person.
+      notes: Federal arrest powers; persuasive for Victorian problems.
 
 reading_level: "Plain English (JD)"
 
