--- a/jd/policy/cards_policy.yml
+++ b/jd/policy/cards_policy.yml
@@ -87,18 +87,18 @@ keywords:
 diagram:
   type: mindmap
   must_be_valid_mermaid: true
-  max_total_nodes: 12
+  max_total_nodes: 18          # was 12
   top_level_branches_min: 5
   top_level_branches_max: 5
   child_node_distribution:
-    - [1,3,3,2,2]
-    - [2,2,2,1,4]
-    - [2,3,3,3,1]
+    - [1,3,3,2,2]              # 17 total nodes
+    - [2,2,2,1,4]              # 17 total nodes
+    - [2,3,3,3,1]              # 18 total nodes
   enforce_pareto_format: true
   format_guidance: |
     Return a fenced Mermaid mindmap with exactly 5 top-level branches;
     child vector must match one of the allowed distributions;
-    total nodes ≤12.
+    total nodes ≤18.
     If over cap, prune by merging/deleting longest branches;
     if still impossible, return "[DIAGRAM TOO LARGE]".
   discourage_heading_mirroring: true
