--- a/jd/cards_yaml/0002-duty-existence-vs-scope-updated.yml
+++ b/jd/cards_yaml/0002-duty-existence-vs-scope-updated.yml
@@ -1,37 +1,39 @@
 front: "How do courts distinguish the existence of a duty of care from its scope, and how should you apply that distinction in a Victorian negligence problem?"
 back: |
-  Issue — Separate duty existence from scope so Victorian negligence stays sequenced before breach or causation.
+  Issue.
+  Separate duty existence from scope so Victorian negligence stays sequenced before breach or causation.
 
-  Rule —
-  - Existence turns on foreseeability filtered by salient features and coherence (Sullivan v Moody, Perre, Woolcock).
-  - Graham Barclay Oysters ties public authorities to statutory purpose.
-  - Crimmins, Stuart v Kirkland-Veenstra, and Tame/Annetts show omissions or psychiatric harm demand control or assumed responsibility.
+  Rule.
+    - Existence turns on foreseeability filtered by salient features and coherence (Sullivan v Moody, Perre, Woolcock).
+    - Graham Barclay Oysters ties public authorities to statutory purpose.
+    - Crimmins, Stuart v Kirkland-Veenstra, and Tame/Annetts show omissions or psychiatric harm demand control or assumed responsibility.
 
-  Application scaffold —
-  (1) Existence: map foreseeability, salient features, and coherence before naming duty.
-  (2) If satisfied, define scope by isolating the risk, actors, and setting.
-  (3) Analyse breach via Wrongs Act 1958 (Vic) s 48, then causation/scope under s 51 with interveners.
+  Application scaffold.
+    (1) Existence: map foreseeability, salient features, and coherence before naming duty.
+    (2) If satisfied, define scope by isolating the risk, actors, and setting.
+    (3) Analyse breach via Wrongs Act 1958 (Vic) s 48, then causation/scope under s 51 with interveners.
 
-  Authorities map —
-  - Sullivan v Moody — Coherence filter for duty existence.
-  - Perre v Apand — Salient features approach.
-  - Graham Barclay Oysters — Public authority duties.
-  - Crimmins/Stuart v Kirkland-Veenstra — Omissions and control.
+  Authorities map.
+    - Sullivan v Moody — Coherence filter for duty existence.
+    - Perre v Apand — Salient features approach.
+    - Graham Barclay Oysters — Public authority duties.
+    - Crimmins/Stuart v Kirkland-Veenstra — Omissions and control.
 
-  Statutory hook —
-  - Wrongs Act 1958 (Vic) ss 26, 48, 51, 54.
-  - Pt VBA (damages caps/thresholds).
-  - Pt IVAA (proportionate liability).
-  - Consider ACL s 18 for concurrent claims.
+  Statutory hook.
+    - Wrongs Act 1958 (Vic) ss 26, 48, 51, 54.
+    - Pt VBA (damages caps/thresholds).
+    - Pt IVAA (proportionate liability).
+    - Consider ACL s 18 for concurrent claims.
 
-  Tripwires —
-  - Importing Shirt calculus into existence analysis.
-  - Collapsing scope into s 51 causation.
-  - Missing coherence checks for public authorities.
-  - Overlooking psychiatric-harm/omission gates.
-  - Ignoring statutory defences (s 54) or damages caps (Pt VBA).
+  Tripwires.
+    - Importing Shirt calculus into existence analysis.
+    - Collapsing scope into s 51 causation.
+    - Missing coherence checks for public authorities.
+    - Overlooking psychiatric-harm/omission gates.
+    - Ignoring statutory defences (s 54) or damages caps (Pt VBA).
 
-  Conclusion — Sequence: existence → scope → breach → causation → remedy. Show doctrinal discipline and statutory literacy.
+  Conclusion.
+  Sequence: existence → scope → breach → causation → remedy. Show doctrinal discipline and statutory literacy.
 
 why_it_matters: |
 
