--- a/jd/cards_yaml/0003-breach-what-is-the-shirt-calculus.yml
+++ b/jd/cards_yaml/0003-breach-what-is-the-shirt-calculus.yml
@@ -1,43 +1,45 @@
 front: "How do you apply the Shirt calculus to determine breach in negligence?"
 back: |
-  Issue — Identify when a defendant falls below the reasonable-response standard under Wrongs Act 1958 (Vic) s 48 once duty is already established.
+  Issue.
+  Identify when a defendant falls below the reasonable-response standard under Wrongs Act 1958 (Vic) s 48 once duty is already established.
 
-  Rule —
-  - The Shirt calculus asks whether a reasonable person would have taken precautions by weighing: 
-    (1) foreseeability (not far‑fetched or fanciful) (Chapman v Hearse (1961) 106 CLR 112, 121, s 48(1)(a));
-    (2) not insignificant risk (s 48(1)(b));
-    (3) probability and seriousness of harm;
-    (4) burden of precautions; and
-    (5) social utility of the activity.
-  - Risk must be characterised ex ante without hindsight: Wrongs Act 1958 (Vic) s 49.
-  - Careful risk definition is essential: Roads and Traffic Authority of NSW v Dederer (2007) 234 CLR 330, 345–46 [44].
+  Rule.
+    - The Shirt calculus asks whether a reasonable person would have taken precautions by weighing:
+      (1) foreseeability (not far‑fetched or fanciful) (Chapman v Hearse (1961) 106 CLR 112, 121, s 48(1)(a));
+      (2) not insignificant risk (s 48(1)(b));
+      (3) probability and seriousness of harm;
+      (4) burden of precautions; and
+      (5) social utility of the activity.
+    - Risk must be characterised ex ante without hindsight: Wrongs Act 1958 (Vic) s 49.
+    - Careful risk definition is essential: Roads and Traffic Authority of NSW v Dederer (2007) 234 CLR 330, 345–46 [44].
 
-  Application scaffold —
-  (1) Frame the specific risk without hindsight (s 49).
-  (2) Establish foreseeability and "not insignificant" risk (s 48(1)(a)-(b)).
-  (3) Evaluate s 48(2)(a)-(d): probability, seriousness, burden, social utility.
-  (4) Cite fact anchors (public authority, recreation, vulnerable plaintiff).
-  (5) Keep causation and contributory negligence separate (s 51).
+  Application scaffold.
+    (1) Frame the specific risk without hindsight (s 49).
+    (2) Establish foreseeability and "not insignificant" risk (s 48(1)(a)-(b)).
+    (3) Evaluate s 48(2)(a)-(d): probability, seriousness, burden, social utility.
+    (4) Cite fact anchors (public authority, recreation, vulnerable plaintiff).
+    (5) Keep causation and contributory negligence separate (s 51).
 
-  Authorities map —
-  - Wyong v Shirt (1980) 146 CLR 40, 47-48 — Threshold and balancing.
-  - Chapman v Hearse (1961) 106 CLR 112, 121 — Foreseeability standard.
-  - Vairy v Wyong Shire Council [2005] HCA 62; (2005) 223 CLR 422 — Anti-hindsight.
-  - Brodie v Singleton Shire Council (2001) 206 CLR 512 — Public authorities.
-  - Strong v Woolworths Ltd [2012] HCA 5; (2012) 246 CLR 182 — Modern application.
+  Authorities map.
+    - Wyong v Shirt (1980) 146 CLR 40, 47-48 — Threshold and balancing.
+    - Chapman v Hearse (1961) 106 CLR 112, 121 — Foreseeability standard.
+    - Vairy v Wyong Shire Council [2005] HCA 62; (2005) 223 CLR 422 — Anti-hindsight.
+    - Brodie v Singleton Shire Council (2001) 206 CLR 512 — Public authorities.
+    - Strong v Woolworths Ltd [2012] HCA 5; (2012) 246 CLR 182 — Modern application.
 
-  Statutory hook —
-  - Wrongs Act 1958 (Vic) ss 48-49, 51 — Breach and causation framework.
-  - Consider Pt IVAA for proportionate liability where applicable.
+  Statutory hook.
+    - Wrongs Act 1958 (Vic) ss 48-49, 51 — Breach and causation framework.
+    - Consider Pt IVAA for proportionate liability where applicable.
 
-  Tripwires —
-  - Treating foreseeability alone as breach without proving "not insignificant" (s 48(1)).
-  - Framing the risk with hindsight rather than ex ante (s 49 guardrail).
-  - Reducing s 48(2) to a checklist instead of a balancing exercise.
-  - Over‑relying on "obvious risk" where D's operations created the hazard.
-  - Collapsing breach with causation instead of applying s 51 separately.
+  Tripwires.
+    - Treating foreseeability alone as breach without proving "not insignificant" (s 48(1)).
+    - Framing the risk with hindsight rather than ex ante (s 49 guardrail).
+    - Reducing s 48(2) to a checklist instead of a balancing exercise.
+    - Over‑relying on "obvious risk" where D's operations created the hazard.
+    - Collapsing breach with causation instead of applying s 51 separately.
 
-  Conclusion — Breach is established only if the s 48 balance shows a reasonable person would have taken additional precautions. Keep causation and contributory negligence in their own steps.
+  Conclusion.
+  Breach is established only if the s 48 balance shows a reasonable person would have taken additional precautions. Keep causation and contributory negligence in their own steps.
 
 why_it_matters: |
   This is the core Victorian breach scaffold. Starting at s 48(1) forces precise risk identification and a "not insignificant" screen; s 48(2) then structures a proportional response to probability, seriousness, burden, and social utility, with s 49’s anti-hindsight guardrail and s 51 separating causation.
