--- a/jd/cards_yaml/0013-breach-wrongs-act-s48.yml
+++ b/jd/cards_yaml/0013-breach-wrongs-act-s48.yml
@@ -1,71 +1,68 @@
-front: >
-  Breach (Vic): how to run Wrongs Act s 48 alongside the Shirt calculus when testing reasonable precautions?
+front: "Breach (Vic): how to run Wrongs Act s 48 alongside the Shirt calculus when testing reasonable precautions?"
 back: |
-  Issue — Whether the defendant breached the Victorian negligence standard by failing to take reasonable precautions against a not-insignificant risk under Wrongs Act 1958 (Vic) s 48, applying the Shirt calculus.
+  Issue.
+  Whether the defendant breached the Victorian negligence standard by failing to take reasonable precautions against a not-insignificant risk under Wrongs Act 1958 (Vic) s 48, applying the Shirt calculus.
 
-  Rule — Wrongs Act 1958 (Vic) s 48(1)–(2) sets the statutory framework for breach, requiring:
-  - Foreseeability of a "not insignificant" risk of harm.
-  - Balancing the s 48(2) factors:
-    (a) the probability that harm would occur if care were not taken.
-    (b) the likely seriousness of the harm.
-    (c) the burden, cost, and practicability of taking precautions.
-    (d) the social utility of the activity that creates the risk.
+  Rule.
+  Wrongs Act 1958 (Vic) s 48(1)–(2) sets the statutory framework for breach and requires both foreseeability of a "not insignificant" risk of harm and a balance of the s 48(2) factors:
+  - probability that harm would occur if care were not taken;
+  - likely seriousness of the harm;
+  - burden, cost, and practicability of taking precautions; and
+  - social utility of the activity that creates the risk.
 
-  The High Court in Wyong Shire Council v Shirt (1980) 146 CLR 40 established that breach depends on what a reasonable person would do in the circumstances, not merely the possibility of harm. The risk assessment must be time-sliced, focusing on the information reasonably available when the defendant's conduct occurred (Tapp v Australian Bushmen's Campdraft & Rodeo Association Ltd [2022] HCA 11). Risk characterisation must be accurate to avoid distorting the calculus (Roads and Traffic Authority of NSW v Dederer (2007) 234 CLR 330; Vairy v Wyong Shire Council (2005) 223 CLR 422). The Victorian Court of Appeal in Dwyer v Calco Timbers Pty Ltd [2008] VSCA 260 applies this statutory breach framework in the Victorian context.
+  High Court authority emphasises that breach turns on what a reasonable person would do in the circumstances, not mere possibility of harm (Wyong Shire Council v Shirt (1980) 146 CLR 40). The assessment must be time-sliced, relying on information reasonably available when the conduct occurred (Tapp v Australian Bushmen's Campdraft & Rodeo Association Ltd [2022] HCA 11). Accurate risk characterisation avoids distorting the calculus (Roads and Traffic Authority of NSW v Dederer (2007) 234 CLR 330; Vairy v Wyong Shire Council (2005) 223 CLR 422). Victorian courts apply this statutory framework in practice (Dwyer v Calco Timbers Pty Ltd [2008] VSCA 260).
 
-  Application scaffold —
+  Application scaffold.
   (1) Precisely define the risk at the correct level of generality.
   (2) Establish foreseeability and that the risk was "not insignificant" (excluding fanciful or remote risks).
   (3) Weigh the s 48(2)(a)–(d) factors: probability, seriousness, burden/cost, and social utility.
   (4) Link findings to specific precautions a reasonable person would have taken.
-  (5) Exclude hindsight under s 49 and consider statutory qualifiers on obvious or inherent risks (ss 53–55).
+  (5) Exclude hindsight under s 49 and integrate statutory qualifiers on obvious or inherent risks (ss 53–55).
   (6) Conclude whether breach occurred.
 
-  Authorities map —
+  Authorities map.
   - Wyong Shire Council v Shirt (1980) 146 CLR 40, 43–45.
   - Tapp v Australian Bushmen's Campdraft & Rodeo Association Ltd [2022] HCA 11, [10]–[20].
   - Roads and Traffic Authority of NSW v Dederer (2007) 234 CLR 330, 337–339.
   - Vairy v Wyong Shire Council (2005) 223 CLR 422, 430–433.
   - Dwyer v Calco Timbers Pty Ltd [2008] VSCA 260, [15]–[25].
 
-  Statutory hook —
+  Statutory hook.
   - Wrongs Act 1958 (Vic) ss 48 (breach), 49 (hindsight excluded), 53 (obvious risk), 54–55 (no duty to warn of obvious risk; inherent risk), 56 (professionals).
 
-  Tripwires —
-  - Treating foreseeability as sufficient without proving a "not insignificant" risk.
-  - Mischaracterising the risk (too broad or too narrow) and skewing the calculus.
-  - Using hindsight contrary to s 49's prospective assessment.
-  - Ignoring the burden/cost of precautions or social utility under s 48(2)(c)–(d).
-  - Treating "obvious risk" as absolute where the defendant created or exacerbated the danger.
+  Tripwires.
+  See the `tripwires` list for common breach pitfalls to avoid.
 
-  Conclusion — Breach arises only if, on the information reasonably available at the time, a prudent person would have taken cost-justified precautions after weighing the s 48(2) factors, and no statutory qualifier displaces that conclusion.
+  Conclusion.
+  Breach arises only if, on the information reasonably available at the time, a prudent person would have taken cost-justified precautions after weighing the s 48(2) factors, and no statutory qualifier displaces that conclusion.
 
-why_it_matters: >
+why_it_matters: |
   Melbourne Law School exams reward precise statutory breach reasoning, not rote recitation of the Shirt calculus. Leading with s 48(1)–(2), time-slicing the risk assessment, and integrating s 49 and ss 53–55 demonstrate disciplined, Victoria-specific analysis and maintain clear distinction between breach, duty, and causation.
 
-mnemonic: >
+mnemonic: |
   F–NIS → 48(2) CALC → NO HINDSIGHT → QUALIFIERS → CONCLUDE
 
-diagram: |
+diagram: |-
   ```mermaid
   mindmap
-    root((Breach: s 48 + Shirt))
+    root((Breach — s 48 + Shirt))
       Issue
-        Precisely define risk (not-insignificant)
+        What precise risk?
+        Did D take reasonable precautions?
       Rule
-        s 48(1)–(2) governs breach
-        Shirt calculus (reasonable precautions)
-        Time-slice; no hindsight (s 49)
-      Application
-        Weigh (a) probability • (b) seriousness • (c) burden/cost • (d) social utility
-        Specify practicable precautions
-        Apply qualifiers: obvious/inherent risks (ss 53–55)
+        s 48(1): not-insignificant risk
+        s 48(2): prob/seriousness/burden/social utility
+        s 49: no hindsight
+      Apply
+        Define risk at correct generality
+        Weigh (a)–(d) and link to precautions
+        Decide breach on info then available
       Authorities
         Wyong v Shirt
-        Tapp v ABCRA
-      Statute
-        Wrongs Act s 48 (breach)
-        Wrongs Act s 49; ss 53–55
+        Tapp; Dederer/Vairy
+        Dwyer (Vic)
+      Statutes
+        Qualifiers: ss 53–55; professionals s 56
   ```
 
 tripwires:
