--- a/jd/cards_yaml/0014-breach-wrongs-act-s48-checklist.yml
+++ b/jd/cards_yaml/0014-breach-wrongs-act-s48-checklist.yml
@@ -1,19 +1,20 @@
-front: >
-  Breach (Vic): how to run Wrongs Act s 48 with the Shirt calculus under exam pressure?
+front: "Breach (Vic): how to run Wrongs Act s 48 with the Shirt calculus under exam pressure?"
 back: |
-  Issue — Did the defendant breach the Victorian standard by failing to take reasonable precautions against a not-insignificant risk under Wrongs Act 1958 (Vic) s 48?
+  Issue.
+  Did the defendant breach the Victorian standard by failing to take reasonable precautions against a not-insignificant risk under Wrongs Act 1958 (Vic) s 48?
 
-  Rule — Wrongs Act 1958 (Vic) s 48(1)–(2) requires:
-  - Foreseeability of a risk that is "not insignificant" (excluding far-fetched or fanciful risks);
-  - A reasonable person would have taken precautions after weighing:
-    (a) probability of harm if care not taken;
-    (b) likely seriousness of harm;
-    (c) burden, cost and practicality of precautions;
-    (d) social utility of the activity creating the risk.
+  Rule.
+  Wrongs Act 1958 (Vic) s 48(1)–(2) requires:
+    - Foreseeability of a risk that is "not insignificant" (excluding far-fetched or fanciful risks);
+    - A reasonable person would have taken precautions after weighing:
+      (a) probability of harm if care not taken;
+      (b) likely seriousness of harm;
+      (c) burden, cost and practicality of precautions;
+      (d) social utility of the activity creating the risk.
 
   The High Court in Wyong Shire Council v Shirt (1980) 146 CLR 40 established the balancing method and forbade hindsight. The risk must be precisely characterised and assessed prospectively, time-sliced to the information reasonably available when the conduct occurred (Tapp v Australian Bushmen's Campdraft & Rodeo Association Ltd [2022] HCA 11). Risk characterisation must avoid distortion (Roads and Traffic Authority of NSW v Dederer (2007) 234 CLR 330; Vairy v Wyong Shire Council (2005) 223 CLR 422). The Victorian Court of Appeal in Dwyer v Calco Timbers Pty Ltd [2008] VSCA 260 applies this statutory breach framework in Victoria.
 
-  Application scaffold —
+  Application scaffold.
   (1) Define the specific risk at the correct level of generality.
   (2) Establish foreseeability and that the risk was "not insignificant".
   (3) Identify concrete precautions and weigh each s 48(2) factor (cost, time, practicality).
@@ -21,32 +22,29 @@ back: |
   (5) Address statutory qualifiers: s 49 (exclude hindsight), ss 53–55 (obvious/inherent risk), s 56 (professionals).
   (6) Conclude on breach.
 
-  Authorities map —
-  - Wyong Shire Council v Shirt (1980) 146 CLR 40.
-  - Tapp v Australian Bushmen's Campdraft & Rodeo Association Ltd [2022] HCA 11.
-  - Roads and Traffic Authority of NSW v Dederer (2007) 234 CLR 330.
-  - Vairy v Wyong Shire Council (2005) 223 CLR 422.
-  - Dwyer v Calco Timbers Pty Ltd [2008] VSCA 260.
+  Authorities map.
+    - Wyong Shire Council v Shirt (1980) 146 CLR 40.
+    - Tapp v Australian Bushmen's Campdraft & Rodeo Association Ltd [2022] HCA 11.
+    - Roads and Traffic Authority of NSW v Dederer (2007) 234 CLR 330.
+    - Vairy v Wyong Shire Council (2005) 223 CLR 422.
+    - Dwyer v Calco Timbers Pty Ltd [2008] VSCA 260.
 
-  Statutory hook —
-  - Wrongs Act 1958 (Vic) ss 48, 49, 53, 54, 55, 56.
+  Statutory hook.
+    - Wrongs Act 1958 (Vic) ss 48, 49, 53, 54, 55, 56.
 
-  Tripwires —
-  - Treating foreseeability alone as sufficient without proving a "not insignificant" risk.
-  - Misdescribing the risk (too broad or too narrow).
-  - Using hindsight contrary to s 49's prospective assessment.
-  - Ignoring cost/practicality or social utility under s 48(2).
-  - Treating obvious risk as absolute where defendant created or heightened the danger.
+  Tripwires.
+  Refer to the dedicated `tripwires` list for recurring analytical errors.
 
-  Conclusion — Breach arises only if, prospectively, a prudent person would have adopted proportionate, practical precautions when s 48(2) factors are balanced and no statutory qualifier displaces that result.
+  Conclusion.
+  Breach arises only if, prospectively, a prudent person would have adopted proportionate, practical precautions when s 48(2) factors are balanced and no statutory qualifier displaces that result.
 
 why_it_matters: |
-    Melbourne Law School exams reward answers that lead with s 48(1)–(2), time-slice the Shirt calculus, and then check statutory qualifiers. This approach keeps breach analysis distinct from duty and causation and anchors conclusions to evidence, costs, and practicality.
+  Melbourne Law School exams reward answers that lead with s 48(1)–(2), time-slice the Shirt calculus, and then check statutory qualifiers. This approach keeps breach analysis distinct from duty and causation and anchors conclusions to evidence, costs, and practicality.
 
-mnemonic: >
+mnemonic: |
   RISK → F/NIS → CALC (a–d) → QUALIFIERS → CONCLUDE
 
-diagram: |
+diagram: |-
   ```mermaid
   mindmap
     root((Breach: s 48 + Shirt))
