--- a/jd/cards_yaml/0015-causation-scope-interveners.yml
+++ b/jd/cards_yaml/0015-causation-scope-interveners.yml
@@ -1,33 +1,49 @@
 front: "Causation (Vic): how do ss 51–52 handle factual causation, exceptional cases, and scope when interveners appear?"
 back: |
-  Issue — Has D's negligence factually caused P's harm, and should liability extend to that harm under Wrongs Act ss 51-52 when intervening acts arise?
+  Issue.
+  Has D's negligence factually caused P's harm, and should liability extend to that harm under Wrongs Act ss 51–52 when interveners arise?
 
-  Rule —
-  - Wrongs Act 1958 (Vic) s 51(1)(a) demands a "necessary condition" (but-for) link.
-  - Section 51(2) permits departure only in exceptional cases and consistently with established principles.
-  - Section 52 requires the court to decide whether responsibility should extend, weighing justice and policy, with the onus on P.
+  Rule.
+  - Wrongs Act 1958 (Vic) s 51(a) requires a "necessary condition" (but-for) link.
+  - Section 51(2) allows departures only in exceptional cases consistent with established principles.
+  - Section 52 tasks the court with deciding whether responsibility should extend, weighing justice and policy, with the onus on P.
 
-  Application scaffold —
-  (1) Run but-for test: deploy circumstantial inference where needed (Strong v Woolworths (2012) 246 CLR 182 at [5]-[9]).
-  (2) Exclude bare possibility (Amaca v Booth (2011) 246 CLR 36 at [49]).
-  (3) Remember loss-of-chance limits (Tabet v Gett (2010) 240 CLR 537 at [111]-[112]).
-  (4) For exceptional cases under s 51(2), require clear proof of established principles.
+  Application scaffold.
+  (1) Run but-for test, using circumstantial inference where needed (`Strong v Woolworths (2012) 246 CLR 182` at [5]-[9]).
+  (2) Exclude bare possibility (`Amaca v Booth (2011) 246 CLR 36` at [49]).
+  (3) Remember loss-of-chance limits (`Tabet v Gett (2010) 240 CLR 537` at [111]-[112]).
+  (4) For exceptional cases under s 51, require clear proof of established principles.
   (5) Under s 52, weigh policy factors for scope, especially with interveners.
+
+  Authorities map.
+  - `Strong v Woolworths Ltd (2012) 246 CLR 182` (HCA)
+  - `Amaca Pty Ltd v Booth (2011) 246 CLR 36` (HCA)
+  - `Tabet v Gett (2010) 240 CLR 537` (HCA)
+  - `Adeels Palace Pty Ltd v Moubarak; Adeels Palace Pty Ltd v Bou Najem (2009) 239 CLR 420` (HCA)
+
+  Statutory hook.
+  - Wrongs Act 1958 (Vic) ss 51–52 (consider s 51(2) exceptional cases discipline).
+
+  Tripwires.
+  See dedicated `tripwires` field.
+
+  Conclusion.
+  Separate factual causation under s 51 from scope under s 52, signpost exceptional departures, and confront interveners with Wallace's normative lens to keep liability tightly reasoned.
 
 why_it_matters: |
   Exams punish conflating causation limbs. Sequencing ss 51–52 lets you cite the right authorities, rebut 'material risk' shortcuts, and analyse interveners with Wallace's normative lens—hallmarks of H1 reasoning.
 
 mnemonic: B-E-S-I → But-for → Exceptional? → Scope → Interveners
 
-diagram: |
+diagram: |-
   ```mermaid
   mindmap
     root((Causation: ss 51–52 (Vic)))
       Issue
         But-for → exceptional? → scope with interveners
       Rule
-        s 51(1)(a): necessary condition (but-for)
-        s 51(2): departures only in exceptional cases
+        s 51(a): necessary condition (but-for)
+        s 51: departures only in exceptional cases
         s 52: scope of liability (justice/policy)
       Application
         But-for with circumstantial inference; exclude bare possibility
@@ -42,7 +58,7 @@ diagram: |
   ```
 
 tripwires:
-  - "Treating s 51(2) as a material-risk shortcut."
+  - "Treating s 51 as a material-risk shortcut."
   - "Collapsing factual causation with scope contrary to Wallace."
   - "Assuming third-party crime satisfies causation absent but-for proof."
   - "Letting routine medical negligence break the chain contra Mahony."
@@ -80,7 +96,7 @@ anchors:
       pinpoints:
         - "[52]"
         - "[57]"
-      notes: Cautions against finding exceptional cases under s 51(2).
+      notes: Cautions against finding exceptional cases under s 51.
 
   statutes:
     - name: Wrongs Act 1958 (Vic)
