--- a/jd/cards_yaml/0016-defences-loss-allocation-volenti-obvious-risk-cn.yml
+++ b/jd/cards_yaml/0016-defences-loss-allocation-volenti-obvious-risk-cn.yml
@@ -1,38 +1,40 @@
 front: "Defences (Vic): when do volenti, obvious/inherent risk, and contributory negligence reshape liability and damages?"
 back: |
-  Issue — When and how do volenti non fit injuria, statutory obvious/inherent risk rules, and contributory negligence alter liability and damages in Victorian negligence problems?
+  Issue.
+  When and how do volenti non fit injuria, statutory obvious/inherent risk rules, and contributory negligence alter liability and damages in Victorian negligence problems?
 
-  Rule —
+  Rule.
   - Volenti requires proof the plaintiff freely and voluntarily accepted the legal risk; mere awareness is insufficient (Rootes v Shelton (1967) 116 CLR 383).
   - Statutory “obvious” and “inherent” risk provisions confine duties and warnings; inherent risks (those not avoidable by reasonable care) are not actionable, and failure to warn of obvious risks is generally not negligent (Wrongs Act 1958 (Vic) Pt X).
   - Contributory negligence reduces damages to the extent “just and equitable”, assessed by relative culpability and causal potency (Podrebersek v Australian Iron & Steel Pty Ltd (1985) 59 ALJR 492).
 
-  Application scaffold —
+  Application scaffold.
   (1) Identify candidate defences early (volenti; obvious/inherent risk; contributory negligence).
   (2) For volenti, prove informed, free acceptance of the specific legal risk; look for express terms, conduct, and context (e.g., risky recreation).
   (3) Test statutory risk provisions: classify the risk; consider any warnings and practicality of avoiding it.
   (4) If liability remains, apportion: explain culpability versus causal potency, justify the percentage, and address whether apportionment could reach 100% on the facts (e.g., intoxicated driver/passenger).
   (5) Consider waivers for recreational services under federal law and any intoxication presumptions.
 
-  Authorities map —
+  Authorities map.
   - Rootes v Shelton (1967) 116 CLR 383 — volenti demands acceptance, not mere knowledge.
   - Podrebersek v Australian Iron & Steel Pty Ltd (1985) 59 ALJR 492 — sets the culpability/potency apportionment method.
   - Joslyn v Berryman [2003] HCA 34; 214 CLR 552 — intoxication presumptions and contributory negligence.
   - Cole v South Tweed Heads Rugby League Football Club Ltd (2004) 217 CLR 469 — alcohol, scope of duty, and warnings in recreational settings.
   - Dwyer v Calco Timbers Pty Ltd [2008] VSCA 260 — Victorian requirements for reasoned apportionment percentages.
 
-  Statutory hook —
+  Statutory hook.
   - Wrongs Act 1958 (Vic) s 26 (contributory negligence), Pt X (obvious/inherent risk), s 14G (intoxication presumptions).
   - Competition and Consumer Act 2010 (Cth) s 139A (recreational services waivers).
 
-  Tripwires —
+  Tripwires.
   - Treating “obvious risk” as an automatic duty negation without analysing scope and context.
   - Equating awareness with volenti without proof of free acceptance of the legal risk.
   - Skipping onus/reasonableness analysis on failure-to-warn disputes.
   - Ignoring intoxication presumptions or recreational waivers where pleaded.
   - Apportioning without reasons on culpability and causal potency.
 
-  Conclusion — Only a proved volenti or non-actionable inherent risk defeats liability; otherwise, damages are reduced on a just-and-equitable basis with statutory modifiers applied.
+  Conclusion.
+  Only a proved volenti or non-actionable inherent risk defeats liability; otherwise, damages are reduced on a just-and-equitable basis with statutory modifiers applied.
 
 why_it_matters: |
   Victorian exams reward a disciplined defence-first roadmap: test volenti and statutory risk rules before turning to principled apportionment. Clear reasons on culpability and causal potency, tied to statutory overlays and any waivers, signal precise command of defences and damages.
